k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: banking-app-route
spec:
  parentRefs:
  - name: banking-app-gateway
  hostnames:
  - "yessbank.edgaryasociados.synology.me"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: banking-app-service
      port: 80
